[orga] fix checkbox layout for questions wrapping to more than one line
fixes #489

--- a/src/pretalx/static/common/scss/_forms.scss
+++ b/src/pretalx/static/common/scss/_forms.scss
@@ -168,6 +168,7 @@ table .radio, table .checkbox {
 
     &:after {
       left: 4px;
+      top: 4px;
       width: 16px;
       height: 16px;
       margin: 4px 0px 0;
